force-app/main/default/objects/PBB_Related_Party__c/PBB_Related_Party__c.object-meta.xml
<CustomObject>
    <description>Junction object between Account and Contact used for PBB MVP SE Lifestyle Project.</description>
    <label>PBB Related Party</label>
    <nameField>
        <displayFormat>RP{0000000000}</displayFormat>
        <label>PBB Related Party Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PBB Related Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>