force-app/main/default/objects/PBB_Related_Party__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The client/enterprise, US-4334</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PBB Related Parties</relationshipLabel>
    <relationshipName>PBB_Related_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>