force-app/main/default/objects/PBB_Related_Party__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The individual who is a contact of the client/enterprise, US-4334</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PBB Related Parties</relationshipLabel>
    <relationshipName>PBB_Related_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>