force-app/main/default/objects/PBB_Related_Party__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <description>Relationship between the client and the contact/related party, US-4334</description>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Contact Person</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Business Representative</fullName>
            </value>
            <value>
                <fullName>Sole Proprietor</fullName>
            </value>
            <value>
                <fullName>Joint Participant</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Financial Planner</fullName>
            </value>
            <value>
                <fullName>Accounting Officer</fullName>
            </value>
            <value>
                <fullName>Company Secretary</fullName>
            </value>
            <value>
                <fullName>Treasurer</fullName>
            </value>
            <value>
                <fullName>Office Bearer</fullName>
            </value>
            <value>
                <fullName>Shareholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>